--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -183,9 +183,9 @@
         <button style="transform: translateY(-120px);"  class="button">REGISTER FOR FREE</button>
         </section>
         <section>
-            <h2>F.A.Q</h2>
+            <h2 class="head">F.A.Q</h2>
             <div class="container">
-                <div class="row1">
+                <div>
                     <div>
                         <h3>How does this work?</h3>
                     </div>
@@ -200,7 +200,7 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </div>
                 </div>
-                <div class="row2">
+                <div>
                     <div>
                         <h3>How does this work?</h3>
                     </div>
@@ -219,15 +219,17 @@
     </main>
     <footer>
         <section>
-            <div>
-                <img src="images\smile.png" alt="logo">
+            <div class="end">
+                <img src="images\logo.png" alt="logo">
                 <div>
                     <i class="fa-brands fa-facebook"></i>
+                    &nbsp; &nbsp; &nbsp;
                     <i class="fa-brands fa-twitter"></i>
+                    &nbsp; &nbsp; &nbsp;
                     <i class="fa-brands fa-instagram"></i>
                 </div>
             </div>
-            <p>©smileschool 2020</p>
+            <p style="color: #FFFFFF;transform: translateY(-60px);opacity: 50%;">©smileschool 2020</p>
         </section>
     </footer>
 </body>
