--- a/headphones/1-index.html
+++ b/headphones/1-index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="1-styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Headphonez</title>
 </head>                                                                        
 <body>
@@ -13,8 +14,8 @@
             <nav>
                 <div class="logo">
                     <img src="logo_headphones.png" alt="logo">
+                <i class="fa-solid fa-bars"></i>
                 </div>
-        
                     <ul>
                         <li><a href="#">what we do</a></li>
                         &nbsp;   &nbsp;   &nbsp;  &nbsp; &nbsp;
@@ -27,7 +28,7 @@
         <main>
     <section id="call">
         <div>
-            <h1>Lorem ipsum dolor sit amet lorem ipsum</h1>
+            <h1 class="parone">Lorem ipsum dolor sit amet lorem ipsum</h1>
             <h2>Lorem ipsum dolor sit amet lorem ipsum</h2>
         </div>
         <button>CALL TO ACTION</button>
